<resources>
    <string name="app_name">Control de Actividades</string>

    <string name="title_activity_docente_menu">DocenteMenuActivity</string>
    <string name="title_activity_materia_menu">MateriaMenuActivity</string>
    <string name="title_activity_grupo_materia">GrupoMateriaMenuActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tipoGrupo">Tipo Grupo</string>
    <string name="materia">Materia</string>
    <string name="docente">Docente</string>
    <string name="ciclo">Ciclo</string>
    <string name="local">Local</string>
    <string name="diasImpartida">Día que se imparte</string>
    <string name="horario">Horario</string>
    <string name="idGrupo">Id Grupo</string>
    <string name="numGrupo">Numero de Grupo</string>
    <string name="codDocente">Codigo Docente</string>
    <string name="nomDocente">Nombre Docente</string>
    <string name="codMateria">Codigo Materia</string>
    <string name="nomMateria">Nombre Materia</string>
    <string name="consular">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="eliminar">Eliminar</string>
    <string name="id_tipo_grupo" translatable="false">id_tipo_grupo</string>
    <string name="tipo_grupo" translatable="false">tipo_grupo</string>
    <string name="insertar">insertar</string>
    <string name="actualizar">actualizar</string>

    <string name="categoriaRecurso">Categoria Recurso</string>
    <string name="id" translatable="false">ID</string>
    <string name="acciones">Acciones</string>

    <string name="cargo">Cargo</string>


    <string name="id_actividad">ID Actividad</string>
    <string name="nombre_actividad">Nombre</string>
    <string name="detalle_actividad">Detalle</string>
    <string name="fecha_actividad">Fecha</string>
    <string name="horaI_actividad">Hora de inicio</string>
    <string name="horaF_actividad">Hora de finalización</string>
    <string name="docente_actividad">Docente</string>

    <string name="nom_recurso">Recurso</string>
    <string name="det_recurso">Detalle Recurso</string>
    <string name="estado">Estado</string>
    <string name="inactivo">Inactivo</string>
    <string name="activo">Activo</string>


    <string name="Recurso">Recurso</string>
    <string name="Actividad">Actividad</string>


    <string name="InsertarCicloHeader">Insertar Valores</string>
    <string name="InsertarCicloHint1" translatable="false">ID</string>
    <string name="InsertarCicloHint2">Año</string>
    <string name="InsertarCicloHint3">Numero</string>
    <string name="InsertarCicloButton1">Insertar</string>
    <string name="InsertarCicloButton2">Limpiar Valores</string>
    <string name="ActualizarCicloHeader">Actualizar Valores</string>
    <string name="ActualizarCicloButton1">Actualizar</string>
    <string name="ConsultarCicloHeader">Consultar Valor</string>
    <string name="ConsultarCicloButton1">Consultar</string>
    <string name="EliminarCicloButton1">Eliminar</string>
    <string name="EliminarCicloHeader">Eliminar Valor</string>
    <string name="EliminarCargaAcademicaButton1">EliminarCargaAcademica</string>
    <string name="ActualizarReservaHeader">Actualizar Reserva</string>
    <string name="ReservaHint1">Recurso</string>
    <string name="ReservaHint2">Grupo</string>
    <string name="ConsultarReservaHeader">Consultar Reserva</string>
    <string name="EliminarReservaHeader">Eliminar Reserva</string>
    <string name="InsertarReservaHeader">Insertar Reserva</string>
    <string name="HorarioHint1">Hora Inicio</string>
    <string name="HorarioHint2">Hora Fin</string>
    <string name="EliminarHorarioHeader">Eliminar Horario</string>
    <string name="ConsultarHorarioHeader">Consultar Horario</string>
    <string name="ActualizarHorarioHeader">Actualizar Horario</string>
    <string name="InsertarHorarioHeader">Insertar Horario</string>

    <string name="cerrar">Cerrar</string>

    <string name="usuario">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>

</resources>

