<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/idGrupo" />
        <EditText
            android:id="@+id/editIdGrupo"
            android:inputType="text"
            android:maxLength="2"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/tipoGrupo" />
        <Spinner android:id="@+id/spinnerTipoGrupo"/>
    </TableRow>


    <TableRow>
        <TextView android:text="@string/materia" />
        <Spinner android:id="@+id/spinnerMateria1"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/docente"/>
        <Spinner android:id="@+id/spinnerDocente1"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/ciclo"/>
        <Spinner android:id="@+id/spinnerCiclo1"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/local"/>
        <EditText
            android:id="@+id/editLocal"
            android:inputType="text"
            android:maxLength="10"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/diasImpartida"/>
        <EditText
            android:id="@+id/editDiasImpartida"
            android:inputType="text"
            android:maxLength="50"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/horario" />
        <Spinner android:id="@+id/spinnerHorario"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/numGrupo" />
        <EditText
            android:id="@+id/editNumGrupo"
            android:inputType="text"
            android:maxLength="2"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarGrupoMateria"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTextoGrupoMateria"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>
