<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/nom_recurso"/>
        <EditText android:id="@+id/editNomRecurso"
            android:inputType="text" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/det_recurso" />
        <EditText android:id="@+id/editDetRecurso"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="4"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/estado"/>
        <Switch android:id="@+id/switchEstado"
            android:textOn="@string/activo"
            android:textOff="@string/inactivo"
            android:checked="false"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/categoriaRecurso"/>
        <Spinner android:id="@+id/spinnerCategoria"/>
    </TableRow>

    <TableRow>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_column="0"
            android:background="@mipmap/savee"
            android:onClick="insertarCargo"/>

        <Button android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            style="@style/BotonEstilo"/>
    </TableRow>

</TableLayout>
