<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/cargo"/>
        <EditText
            android:id="@+id/editcargo"
            android:inputType="text"
            android:maxLength="250"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/materia"/>
        <EditText
            android:id="@+id/editMateria"
            android:inputType="text"
            android:maxLength="255"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/docente"/>
        <EditText
            android:id="@+id/editDocente"
            android:inputType="text"
            android:maxLength="255"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo"/>
        <EditText
            android:id="@+id/editCiclo"
            android:inputType="text"
            android:maxLength="255"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarTipoGrupo"
            android:text="@string/insertar"
            />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            />

    </TableRow>



</TableLayout>
