<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/cargo"/>
        <EditText
            android:id="@+id/editCargo"
            android:inputType="number"
            android:maxLength="2"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/materia"/>
        <EditText
            android:id="@+id/editMateria"
            android:inputType="text"
            android:maxLength="6"

            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/docente"/>
        <EditText
            android:id="@+id/editDocente"
            android:inputType="text"
            android:maxLength="7"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo"/>
        <EditText
            android:id="@+id/editCiclo"
            android:inputType="number"
            android:maxLength="2"
            />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarCargaAcademica"
            android:text="@string/actualizar"
            />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            />
    </TableRow>
</TableLayout>
