<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InsertarCicloHeader"
        android:textSize="35dp"
        android:paddingLeft="50dp"
        android:textColor="@color/colorAccent"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/editIdCiclo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint1"
        android:inputType="number"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/editAnioCiclo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint2"
        android:inputType="number"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/editNumCiclo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint3"
        android:inputType="number"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="35dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InsertarCicloButton1"
            android:onClick="insertarCiclo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InsertarCicloButton2"
            android:onClick="limpiarTextoCiclo" />
    </LinearLayout>


</LinearLayout>
