<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="proyecto.pdm.CargaAcademicaInsertarActivity">

    <TableRow>
        <TextView android:text="@string/docente"/>
        <Spinner android:id="@+id/spinnerDocente"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/cargo"/>
        <Spinner android:id="@+id/spinnerCargo"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/materia"/>
        <Spinner android:id="@+id/spinnerMateria"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo"/>
        <Spinner android:id="@+id/spinnerCiclo"/>
    </TableRow>

    <TableRow>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_column="0"
            android:background="@mipmap/savee"
            android:onClick="insertarCargaAcademica" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            style="@style/BotonEstilo"
            />

    </TableRow>

</TableLayout>
