<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/codMateria"/>
        <EditText
            android:id="@+id/editCodMateria"
            android:inputType="text"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nomMateria"/>
        <EditText
            android:id="@+id/editNomMateria"
            android:inputType="text"
            android:maxLength="50"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarMateria"
            android:text="@string/actualizar"
            style="@style/BotonEstilo"/>
        <Button
            android:onClick="limpiarTextoMateria"
            android:text="@string/limpiar"
            style="@style/BotonEstilo"/>
    </TableRow>
</TableLayout>
