<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/ActualizarHorarioHeader"
        android:textColor="@color/colorAccent"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/editIdHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint1"
        android:inputType="number"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/editHoraIni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HorarioHint1"
        android:inputType="time"
        android:paddingTop="45dp" />

    <EditText
        android:id="@+id/editHoraFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HorarioHint2"
        android:inputType="time"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <Button
            style="@style/BotonEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actualizarHorario"
            android:text="@string/ActualizarCicloButton1" />

        <Button
            style="@style/BotonEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="limpiarTextoHorario"
            android:text="@string/InsertarCicloButton2" />

    </LinearLayout>


</LinearLayout>
