<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="proyecto.pdm.ActividadInsertarActivity">

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:text="@string/id_actividad"
            android:layout_width="match_parent" />
        <EditText
            android:id="@+id/editActividad"
            android:inputType="numberSigned"
            android:layout_weight="0.25"
            android:maxLength="10" />
    </TableRow>



    <TableRow>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_column="0"
            android:background="@mipmap/buscar"
            android:onClick="ConsultarActividad"/>
    </TableRow>




    <TableRow>
        <TextView android:text="@string/nombre_actividad" />
        <EditText
            android:id="@+id/editNombreActividad"
            android:inputType="text"
            android:layout_weight="0.25"
            android:maxLength="100" />
    </TableRow>



    <TableRow>
        <TextView android:text="@string/detalle_actividad" />
        <EditText
            android:id="@+id/editDetalle"
            android:inputType="text"
            android:layout_weight="0.25"
            android:maxLength="100" />
    </TableRow>



    <TableRow>
        <TextView android:text="@string/fecha_actividad" />

        <EditText
            android:id="@+id/editFecha"
            android:inputType="date"
            android:layout_weight="0.25"
            android:maxLength="10" />


    </TableRow>



    <TableRow>
        <TextView android:text="@string/horaI_actividad" />
        <EditText
            android:id="@+id/editHoraI"
            android:inputType="time"
            android:layout_weight="0.25"
            android:maxLength="10" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/horaF_actividad" />
        <EditText
            android:id="@+id/editHoraF"
            android:inputType="time"
            android:layout_weight="0.25"
            android:maxLength="10" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/docente_actividad" />
        <EditText
            android:id="@+id/editDocente"
            android:inputType="text"
            android:layout_weight="0.25"
            android:maxLength="7" />
    </TableRow>


    <TableRow>

              <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
                  style="@style/BotonEstilo"/>
    </TableRow>






</TableLayout>