<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/ActualizarCicloHeader"
        android:textColor="@color/colorAccent"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/editIdCiclo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint1"
        android:inputType="number"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/editAnioCiclo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InsertarCicloHint2"
        android:inputType="number"
        android:paddingTop="45dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <Button
            style="@style/BotonEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actualizarCiclo"
            android:text="@string/ActualizarCicloButton1" />

        <Button
            style="@style/BotonEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="limpiarTextoCiclo"
            android:text="@string/InsertarCicloButton2" />

    </LinearLayout>


</LinearLayout>
